src/test/fail/basic_syntax/return_outside_function.lly
#[
SyntaxError: 'return' used outside of a function.
Where: File "return_outside_function.lly" at line 6
]#

return
